tests/scripts/errors/runtime/iterate_non_iterable.cdo
FOR x OF 42 {
    print(x);
}
